--- a/index.html
+++ b/index.html
@@ -1,58 +1,156 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Jasonkalmeida.GitHub.io by jasonkalmeida</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Jasonkalmeida.GitHub.io</h1>
-        <p></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>While We're On The Subject</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap/css/jumbotron.css">
+  <link rel="stylesheet" href="bootstrap/css/podcast.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="bootstrap/js/bootstrap.min.js"></script>
+  <script src="bootstrap/js/podcast.js"></script>
+</head>
+<body>
 
 
-        <p class="view"><a href="https://github.com/jasonkalmeida">View My GitHub Profile</a></p>
+	
 
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+	
+	<nav class="navbar navbar-default">
+	  <div class="container-fluid">
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+	    <ul class="nav navbar-nav navbar-right">
+	      <li><a href="#" id = "link1" onclick="showScroll();">SHOW</a></li>
+	      <li><a href="#" id = "link2" onclick="aboutScroll();">ABOUT</a></li>
+	      <li><a href="#" id = "link3" onclick="contactScroll();">CONTACT</a></li>
+		  <li><a href="http://www.facebook.com"><img class = "navimg" src="bootstrap/css/assets/fb-icon@2x.png"></a></li> 
+		   <li><a href="http://www.twitter.com"><img id = "twitimg" class = "navimg" src="bootstrap/css/assets/twitter-icon@2x.png"></a></li> 
+	    </ul>
+	  </div>
+	</nav>	
+		
+	  
+	  <div class="container">
+		  <div class = "header-image">
+		  	  <img src="bootstrap/css/assets/logo.png">
+	  	  </div>
+	  </div>
+	  
+      <div class="container">
+		<div class = "page-header">
+        	<h1 class="text-center">WHILE WE'RE <br> ON THE SUBJECT</h1>
+		</div>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+      </div>
+	  
+	  <div class="container">
+		  <!--<form action="/subscribe">
+		    <input type="text" name="email" placeholder="Submit your email to never miss an episode...">
+		    <input type="submit" value="Submit">
+		  </form>-->
+			  <form class="form-inline" role="form">
+			    <div class="form-group">
+			      <input type="email" class="form-control" id="email" placeholder="Submit your email to never miss an episode...">
+			    </div>
+			    <button type="submit" class="btn btn-default">SUBMIT</button>
+			  </form>
+			  
+	  </div>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+	
+	<div class = "episode" id="show">
+	    <div class="container">
+	
+		<h2>THE LATEST EPISODE</h2>
+		
+		  <div class = "podcast-holder">
+		  	  <img src="bootstrap/css/assets/Soundcloud_widget.png">
+	  	  </div>
+	
+		</div>
+	</div>
+	
+	<div class = "about" id="about">
+	
+	    <div class="container" >
+	
+		<h2>ABOUT THE SHOW</h2>
+	
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium pretium tempor. Ut eget imperdiet neque. In volutpat ante semper diam molestie, et aliquam erat laoreet. Sed sit amet arcu aliquet, molestie justo at, auctor nunc. Phasellus ligula ipsum, volutpat eget semper id, viverra eget nibh. Suspendisse luctus mattis cursus. Nam consectetur ante at nisl hendrerit gravida. Donec vehicula rhoncus mattis. Mauris dignissim semper mattis. Fusce porttitor a mi at suscipit. Praesent facilisis dolor sapien, vel sodales augue mollis ut. Mauris venenatis magna eu tortor posuere luctus. Aenean tincidunt turpis sed dui aliquam vehicula. Praesent nec elit non dolor consectetur tincidunt sed in felis. Donec elementum, lacus at mattis tincidunt, eros magna faucibus sem, in condimentum est augue tristique risus.</p>
+		
+		<hr>
+	
+		</div>
+		
+		<div class = "container">
+			<div class = "row">
+				<div class="col-sm-6">
+					<img class = "avatar" src="bootstrap/css/assets/AaronSized.jpg">
+					<h3>AARON GINN, CO-HOST</h3>
+					<p>Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum, neque sem pretium metus, quis mollis nisl nunc et massa.</p>
+				</div>
+			    <div class="col-sm-6">
+					<img class = "avatar" src="bootstrap/css/assets/ryan.jpg">
+					<h3>RYAN LASTNAME, CO-HOST</h3>
+					<p>Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum, neque sem pretium metus, quis mollis nisl nunc et massa.</p>
+			    </div>
+			</div>
+		</div>
+		
+		
+	</div>
+	
+	
+	<div class = "contact" id = "contact">
+	
+	    <div class="container">
+	
+		<h2>CONTACT US</h2>
+		
+		<p>If you wish to get in contact with the show please email <br> <span class = "cbold">info@wwotspodcast.com</span> 
+			
+			<br><br>
+If you would like to support the show or have a business inquiry please email <span class = "cbold">support@wwotspodcast.com</span><p>
+	
+		</div>
+		
+	  <div class = "footer-image">
+	  	  <img src="bootstrap/css/assets/logo.png">
+  	  </div>
+		
+	</div>
+	
+	<div class = "copyright">
+	    <div class="container">
+	      <!-- Example row of columns -->
+
+	      <footer>
+	        <p>&copy; 2015 While We’re on the Subject Podcast. All Rights Reserved.</p>
+	      </footer>
+	    </div> <!-- /container -->
+		
+		
+	      <footer class = "tintFooter">
+	        <p>Brought to you by</p>
+	      </footer>
+		
+  	 	 <div class = "logo">
+  	  	  	<img src="bootstrap/css/assets/lincoln_logo.png">
+    	 </div>
+	</div>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+
+</body>
 </html>
