--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@
 	
 		<h2>THE LATEST EPISODE</h2>
 		
-		  <div class = "podcast-holder">
+		  <!--<div class = "podcast-holder">
 		  	  <img src="bootstrap/css/assets/Soundcloud_widget.png">
-	  	  </div>
+	  	  </div>-->
+			  
+
+			  <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/187219962&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 	
 		</div>
 	</div>
