--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
   <script src="bootstrap/js/podcast.js"></script>
+  
+  <link rel="shortcut icon" href="bootstrap/css/assets/logo@2x.png"/>
+  <meta property="og:wwots" content="While We're On The Subject"/>
+  <meta property="og:image" content="bootstrap/css/assets/logo@2x.png">
 </head>
 <body>
 
@@ -90,16 +94,16 @@
 		
 		<div class = "container">
 			<div class = "row">
-				<div class="col-sm-6">
-					<img class = "avatar" src="bootstrap/css/assets/AaronSized.jpg">
-					<h3>AARON GINN, CO-HOST</h3>
-					<p>Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum, neque sem pretium metus, quis mollis nisl nunc et massa.</p>
-				</div>
 			    <div class="col-sm-6">
 					<img class = "avatar" src="bootstrap/css/assets/ryan.jpg">
 					<h3>RYAN LASTNAME, CO-HOST</h3>
 					<p>Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum, neque sem pretium metus, quis mollis nisl nunc et massa.</p>
 			    </div>
+				<div class="col-sm-6">
+					<img class = "avatar" src="bootstrap/css/assets/AaronSized.jpg">
+					<h3>AARON GINN, CO-HOST</h3>
+					<p>Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum, neque sem pretium metus, quis mollis nisl nunc et massa.</p>
+				</div>
 			</div>
 		</div>
 		
