--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   <link rel="shortcut icon" href="bootstrap/css/assets/logo@2x.png"/>
   <meta property="og:wwots" content="While We're On The Subject"/>
-  <meta property="og:image" content="bootstrap/css/assets/logo@2x.png"/>
+  <meta property="og:image" content="http://jasonkalmeida.github.io/bootstrap/css/assets/logo@2x.png"/>
 </head>
 <body>
 
