Update For Loader

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			    <div class="form-group">
 			      <input type="email" name="EMAIL" class="form-control" id="email" placeholder="Submit your email to never miss an episode...">
 			    </div>
-			    <button type="submit" class="btn btn-default" onclick="subscribed()">SUBMIT</button>
+			    <button type="submit" id = "button" class="btn btn-default">SUBMIT</button>
 			  </form>
 			  
 			  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
