--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 	      <li><a href="#" id = "link1" onclick="showScroll();">SHOW</a></li>
 	      <li><a href="#" id = "link2" onclick="aboutScroll();">ABOUT</a></li>
 	      <li><a href="#" id = "link3" onclick="contactScroll();">CONTACT</a></li>
-		  <li><a href="http://www.facebook.com"><img class = "navimg" src="bootstrap/css/assets/fb-icon@2x.png"></a></li> 
-		   <li><a href="http://www.twitter.com"><img id = "twitimg" class = "navimg" src="bootstrap/css/assets/twitter-icon@2x.png"></a></li> 
+		  <li><a href="http://www.facebook.com/WWOTS/"><img class = "navimg" src="bootstrap/css/assets/fb-icon@2x.png"></a></li> 
+		   <li><a href="http://www.twitter.com/Wwotspodcast"><img id = "twitimg" class = "navimg" src="bootstrap/css/assets/twitter-icon@2x.png"></a></li> 
 	    </ul>
 	  </div>
 	</nav>	
