--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
       xmlns:fb="http://ogp.me/ns/fb#">
 <head>
   <title>While We're On The Subject</title>
+  <meta name="description" content="Where Tech, Politics, and Absurdity Collide.">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -13,8 +14,15 @@
   <script src="bootstrap/js/podcast.js"></script>
   
   <link rel="shortcut icon" href="bootstrap/css/assets/logo@2x.png"/>
-  <meta property="og:wwots" content="While We're On The Subject"/>
+  <meta property="og:title" content="While We're On The Subject Most Recent Podcasts"/>
   <meta property="og:image" content="http://jasonkalmeida.github.io/bootstrap/css/assets/logo@2x.png"/>
+  <meta property="og:site_name" content="While We're On The Subject"/>
+  <meta property="og:description" content="Where Tech, Politics, and Absurdity Collide."/>
+  <meta property="og:type" content="blog" />
+  
+  <!-- Twitter Card data -->
+<meta name="twitter:card" content="summary">
+
 </head>
 <body>
 
@@ -85,7 +93,15 @@
 	
 		<h2>ABOUT THE SHOW</h2>
 	
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pretium pretium tempor. Ut eget imperdiet neque. In volutpat ante semper diam molestie, et aliquam erat laoreet. Sed sit amet arcu aliquet, molestie justo at, auctor nunc. Phasellus ligula ipsum, volutpat eget semper id, viverra eget nibh. Suspendisse luctus mattis cursus. Nam consectetur ante at nisl hendrerit gravida. Donec vehicula rhoncus mattis. Mauris dignissim semper mattis. Fusce porttitor a mi at suscipit. Praesent facilisis dolor sapien, vel sodales augue mollis ut. Mauris venenatis magna eu tortor posuere luctus. Aenean tincidunt turpis sed dui aliquam vehicula. Praesent nec elit non dolor consectetur tincidunt sed in felis. Donec elementum, lacus at mattis tincidunt, eros magna faucibus sem, in condimentum est augue tristique risus.</p>
+		<p>Where Tech, Politics, and Absurdity Collide.</p>
+
+<p>Let's face it, you need another podcast. There are simply not enough of them out there. We know that you've been looking for the podcast that makes you smarter in under 15 minutes. While We're On The Subject ("WWWOTS" for short) features interviews with famous entrepeneurs to haughty politcians. And most importantly, WWOTS's features debates between Donald Trump and Star Wars Characters. Yes, you always wanted to know where Luke Skywalker stood on important issues.
+
+Hosted by two millennial technologists who have a good sense of humor and a solid education in the Socratic method, WWOTS is short ,sweet, and fun <15 minute portions of subjects of substance. 
+
+It can all be yours...just click the button....
+
+Do it.</p>
 		
 		<hr>
 	
@@ -95,13 +111,13 @@
 			<div class = "row">
 			    <div class="col-sm-6">
 					<img class = "avatar" src="bootstrap/css/assets/ryan.jpg">
-					<h3>RYAN LASTNAME, CO-HOST</h3>
-					<p>Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum, neque sem pretium metus, quis mollis nisl nunc et massa.</p>
+					<h3>RYAN Bethea, CO-HOST</h3>
+					<p>Ryan is an influence marketing consultant at the intersection of politics, start-ups and Hollywood entertainment. Ryan lead grassroots marketing efforts for AMERICA (Lionsgate) and the Dennis Prager Show.</p>
 			    </div>
 				<div class="col-sm-6">
 					<img class = "avatar" src="bootstrap/css/assets/AaronSized.jpg">
 					<h3>AARON GINN, CO-HOST</h3>
-					<p>Nam dapibus nisl vitae elit fringilla rutrum. Aenean sollicitudin, erat a elementum rutrum, neque sem pretium metus, quis mollis nisl nunc et massa.</p>
+					<p>Aaron is an experienced Silicon Valley technologist and co-founder of Lincoln. He is one of the original thought leaders of the growth hacking and conservatarian movements. He worked on growth for Everlane, StumbleUpon, and Mitt Romney's 2012 campaign.</p>
 				</div>
 			</div>
 		</div>
@@ -134,7 +150,7 @@ If you would like to support the show or have a business inquiry please email <s
 	      <!-- Example row of columns -->
 
 	      <footer>
-	        <p>&copy; 2015 While We’re on the Subject Podcast. All Rights Reserved.</p>
+	        <p>&copy; 2016 While We’re on the Subject Podcast. All Rights Reserved.</p>
 	      </footer>
 	    </div> <!-- /container -->
 		
